art work and tags support when encoding to mp3 Donate button